Fix wp_head, add alignwide CSS, add alignfull CSS, and add Google analytics code.

--- a/style.css
+++ b/style.css
@@ -226,6 +226,75 @@ p.mission {
 	font-style: italic;
 }
 
+
+.alignwide, .alignfull {
+  margin: 32px calc(50% - 50vw);
+  max-width: 100vw;
+  width: 100vw;
+  position: relative;
+  padding-right:10px !important
+  padding-bottom:7px
+}
+
+.alignfull h1, .alignfull h2, .alignfull h3, .alignfull h4, .alignfull h5, .alignfull h6 {
+  margin-left:40px;
+}
+.alignfull p {
+  margin-left:40px;
+  margin-right:30px;
+  padding-right:5px;
+}
+.alignfull ul {
+  margin-left:40px;
+  margin-right:30px;
+  padding:5px;
+  padding-right:5px;
+}
+.alignwide img {
+  max-width: 1024px;
+}
+.entry-content > .alignwide {
+     max-width: 1024px;
+}
+.wp-block-columns {
+  margin-bottom:0px;
+  padding-bottom:0px;
+}
+@media (max-width: 920px) {
+  .alignwide {
+    margin: 32px calc( ( 767px - 920px ) / 2 );
+    max-width: 920px;
+    width: 920px;
+  }
+  body{
+    overflow-x:hidden !important;
+  }
+}
+
+
+figcaption {
+  font-size: 80%;
+  color: #bbb;
+}
+
+.iframe-container{
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; 
+  padding-top:30px;
+  overflow:hidden;
+
+}
+.iframe-container iframe, .iframe-container object, .iframe-container embed {
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+
 /* ERAU Colors:
 ERAU Web Blue: #00549a​​​;
 ERAU Web Gold​​​: #a39161;
